HW#13 method toArray Iterable&Iterator

--- a/src/telran/util/.gitignore
+++ b/src/telran/util/.gitignore
@@ -1,3 +1,6 @@
 /LinkedList$Node.class
 /LinkedList.class
 /ArrayListTest.class
+/ArrayList$ArrayListIterator.class
+/LinkedList$LinkedListIterator.class
+/Range$RangeIterator.class
