--- a/src/telran/util/test/.gitignore
+++ b/src/telran/util/test/.gitignore
@@ -5,8 +5,9 @@
 /CollectionTest.class
 /HashSetTest.class
 /SetTest.class
-
 /TreeSetTest.class
 /SortedSet.class
 /SortedSetTest.class
-
+/HashMapTest.class
+/MapTest.class
+/TreeMapTest.class
